<resources>
    <string name="app_name">MyCompanyNew</string>

    <string name="toolbar_title_get_in_touch">Get In Touch</string>
    <string name="toolbar_title_life_at_my_company">Life At My Company</string>
    <string name="toolbar_title_apply_job">Apply  Job</string>

    <string name="btn_submit">Submit</string>
    <string name="btn_apply">apply</string>
    <string name="btn_choose_file">Choose File</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_view_all">View All</string>
    <string name="btn_login">Login</string>

    <!--Word &amp;-->
    <string name="title_upload_resume">Upload Resume* ( PDF Only | Limit: 2MB)</string>
    <string name="title_educational_information_star">Eductional Information*</string>
    <string name="title_number">Number</string>
    <string name="title_male">Male</string>
    <string name="title_female">Female</string>
    <string name="title_other">Other</string>
    <string name="title_address">Address</string>
    <string name="title_current_opening">Current Opening</string>
    <string name="title_you_are_applying_for">You Are Applying For</string>
    <string name="title_if_you_would_like_to_work_with_us">If You Would Like to Work With Us</string>
    <string name="title_please_take_a_moment_to_fill_the_form">Please take a moment to fill the from</string>

    <string name="example_title_associate_product_manager">Associate Product Manager(Digital)</string>
    <string name="example_title_full_time">&#160;&#160;Full Time</string>
    <string name="example_title_location">&#160;&#160;Ahmedabad</string>

    <string name="example_number">+91 12345 67890 / +91 12345 67890</string>
    <string name="example_address">Millard Ave Street No 26, Barcelona, Spin</string>
    <string name="example_no_file_selected">No File selected</string>

    <string name="description_my_company">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,\n\n<br /><br />
When an unknown printer took a galley of type &amp; scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>


    <string name="hint_name">Name</string>
    <string name="hint_name_star">Name*</string>
    <string name="hint_number">Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_message">Message</string>
    <string name="hint_date_of_birth_star">Date of birth*</string>
    <string name="hint_gender_star">Gender*</string>
    <string name="hint_state_star">State*</string>
    <string name="hint_city_star">City*</string>
    <string name="hint_contact_no_star">Contact No*</string>
    <string name="hint_email_id_star">Email Id*</string>
    <string name="hint_total_year_of_experience_star">Total Experience (Years)*</string>

    <string name="radio_button_graduate">Graduate</string>
    <string name="radio_button_post_graduate">Post Graduate</string>
    <string name="radio_button_other">Other</string>

    <string name="register_me_with_under_line"><u>Register Now</u></string>

    <string-array name="apply_position_array">
        <item>Position*</item>

    </string-array>

    <string-array name="country_array">
        <item>Select Country</item>

    </string-array>

    <string-array name="state_array">
        <item>Select State</item>

    </string-array>

    <string-array name="city_array">
        <item>Select City</item>

    </string-array>

    <string-array name="area_array">
        <item>Select Area</item>

    </string-array>


    <string-array name="business_type_array">
        <item>Select Business Type</item>

    </string-array>

    <string-array name="apply_state_array">
        <item>State</item>

    </string-array>

    <string-array name="apply_experience_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10+</item>

    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_about_us">About_us</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_about">About</string>
    <string name="title_my_company">My Company</string>
    <string name="title_our_service">Our Service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>