<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageBackground"
    tools:context=".life_at_my_company.activities.ApplyJobActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:navigationIcon="@drawable/ic_back_arrow"
                app:title="@string/toolbar_title_apply_job"
                app:titleCentered="true"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/title_if_you_would_like_to_work_with_us"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_please_take_a_moment_to_fill_the_form"
                    android:textColor="@color/textColor555555"
                    android:textSize="@dimen/_10ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/title_you_are_applying_for"
                    android:textColor="@color/textPrimaryColor"
                    android:textSize="@dimen/_12ssp" />


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginTop="@dimen/_5sdp">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        style="@style/Spinner"
                        android:popupBackground="@color/white"
                        android:entries="@array/apply_position_array" />
                </com.google.android.material.card.MaterialCardView>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:hint="@string/hint_name_star"
                        app:hintTextColor="@color/grey_60"
                        app:boxBackgroundColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey_60"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:hint="@string/hint_date_of_birth_star"
                        app:hintTextColor="@color/grey_60"
                        app:boxBackgroundColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/hint_gender_star"
                    android:textColor="@color/textPrimaryColor"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/title_male"
                        android:textColor="@color/textPrimaryColor" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/title_female"
                        android:textColor="@color/textPrimaryColor" />


                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/title_other"
                        android:textColor="@color/textPrimaryColor" />

                </RadioGroup>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_3sdp"
                        app:cardBackgroundColor="@color/white"
                        android:layout_weight="1">

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_34sdp"
                            android:popupBackground="@color/white"
                            android:entries="@array/apply_state_array" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_weight="1"
                        android:hint="@string/hint_city_star"
                        app:hintTextColor="@color/grey_60"
                        app:boxBackgroundColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:layout_weight="1"
                        android:hint="@string/hint_contact_no_star"
                        app:hintTextColor="@color/grey_60"
                        app:boxBackgroundColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_weight="1"
                        android:hint="@string/hint_email_id_star"
                        app:hintTextColor="@color/grey_60"
                        app:boxBackgroundColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/textPrimaryColor"
                    android:text="@string/title_educational_information_star" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/radio_button_graduate"
                        android:textColor="@color/textPrimaryColor" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/radio_button_post_graduate"
                        android:textColor="@color/textPrimaryColor" />


                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/radio_button_other"
                        android:textColor="@color/textPrimaryColor" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/hint_total_year_of_experience_star"
                    app:hintTextColor="@color/grey_60"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:textColor="@color/textPrimaryColor"
                    android:text="@string/title_upload_resume" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardElevation="0dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_3sdp"
                            android:text="@string/btn_choose_file"
                            android:textColor="@color/textPrimaryColor"
                            app:backgroundTint="@color/grey_20" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:text="@string/example_no_file_selected"
                            android:textColor="@color/grey_60" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/btn_reset"
                        app:cornerRadius="@dimen/_25sdp"
                        app:strokeColor="@color/colorPrimary"
                        app:strokeWidth="@dimen/_1sdp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/btn_submit"
                        android:textColor="@color/white"
                        app:cornerRadius="@dimen/_25sdp"
                        app:strokeColor="@color/colorPrimary"
                        app:strokeWidth="@dimen/_1sdp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>